Fri Jul 11 08:00:25 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * TAO_IDL/include/fe_extern.h:

          Fixed a compile error on versioned namespace builds.

Fri Jul 11 07:28:12 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * TAO_IDL/util/utl_global.cpp:

          Removed comment about Prism addition which slipped in during
          my previous commit.

Thu Jul 10 15:25:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tests/Client_Leaks/client.cpp:
        * tests/Transport_Current/IIOP/server.cpp:
        * tests/Transport_Current/IIOP/IIOP_Tester.cpp:
        * tests/Transport_Current/IIOP/IIOP_Server_Request_Interceptor.cpp:
        * tests/Portable_Interceptors/Processing_Mode_Policy/Remote/server_main.cpp:
        * tests/Portable_Interceptors/Processing_Mode_Policy/Remote/Server_Task.h:
        * tests/Portable_Interceptors/Processing_Mode_Policy/Remote/Server_Task.cpp:

          Added/Corrected wide-character compatablity.

Thu Jul 10 13:45:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tests/ORB_Local_Config/Two_DLL_ORB/Two_DLL_ORB.mpc:

          Both server and client are compiling the same files (I'm
          not sure why or if this is correct, but it was multi-build
          unsafe, which I have corrected).

        * tests/ORB_Local_Config/Two_DLL_ORB/client.cpp:
        * tests/ORB_Local_Config/Two_DLL_ORB/server.cpp:
        * tests/ORB_Local_Config/Two_DLL_ORB/ORB_DLL.h:
        * tests/ORB_Local_Config/Two_DLL_ORB/ORB_DLL.cpp:
        * tests/ORB_Local_Config/Bug_2612/DllOrb.h:
        * tests/ORB_Local_Config/Bug_2612/DllOrb.cpp:
        * tests/ORB_Local_Config/Bug_2612/Test.cpp:
        * tests/ORB_Local_Config/Service_Dependency/Test.cpp:
        * tests/ORB_Local_Config/Separation/Test.cpp:
        * tests/ORB_Local_Config/Bunch/Test.cpp:
        * utils/catior/catior.cpp:

          Added/Corrected wide-character compatablity.
